# voice-chatbot

./: .env.azure  .env.docker  .env.example  .env.stub  .gitattributes  .gitignore  BUILD_VOICE_AGENT.md  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  requirements.txt
backend/: .dockerignore  .env.azure  .env.example  .env.local  .env.stub  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_faq.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/rest/: __init__.py  admin_faq.py  chat.py  feedback.py  health.py  helpdesk.py  history.py  metrics.py  preferences.py  session.py  suggestions.py
backend/app/api/ws/: __init__.py  chat_ws.py  voice_ws.py
backend/app/core/: config.py  exceptions.py  health.py  logging.py  metrics.py  middleware.py  rate_limit.py  security.py
backend/app/db/: __init__.py  base.py  session.py  types.py
backend/app/db/models/: __init__.py  analytics.py  audit_log.py  enums.py  faq.py  feedback.py  message.py  retrieval.py  session.py  user_preference.py
backend/app/db/repositories/: __init__.py  base.py  repositories.py
backend/app/rag/: __init__.py  embedder.py  prompt_builder.py  reranker.py  vector_store.py
backend/app/schemas/: __init__.py  admin_faq.py  chat.py  feedback.py  helpdesk.py  history.py  preferences.py  session.py  suggestions.py
backend/app/services/: __init__.py  cache.py  conversation_manager.py  dto.py  factory.py  faq_service.py  helpdesk_api_client.py  helpdesk_flow.py  hindi_speech_prep.py  hindi_translator.py  interfaces.py  llm_ollama.py  memory_service.py  normalization.py  rag_service.py  starter_faqs.py  stt_whisper.py  stubs.py  telemetry_service.py  tts_piper.py  validation_service.py
backend/deploy/: README.md
backend/deploy/azure/: README.md  backend-setup.ps1  backend-setup.sh  deploy-backend.sh  deploy-frontend.sh  frontend-setup.ps1  frontend-setup.sh  schema_mssql.sql  start-backend.ps1  start-frontend.ps1  voiceai-backend.service  voiceai-frontend.service
backend/ingestion/: __init__.py  chunking.py  cleaning.py  generate_faqs.py  linkedin_extractor.py  pipeline.py  run_ingestion.py  seed_faqs.py  website_extractor.py
backend/ingestion/loaders/: __init__.py  base.py  docx_loader.py  faq_loader.py  pdf_loader.py  sql_loader.py  text_loader.py  website_loader.py
backend/ingestion/sample_data/: .ingest_manifest.json  company.md  faqs.json
backend/scripts/: docker-entrypoint.sh  download_models.py  seed_ollama.sh
backend/tests/: conftest.py
backend/tests/api/: test_admin_faq.py  test_chat_flow.py  test_chat_ws.py  test_health.py  test_metrics.py  test_middleware.py  test_preferences.py  test_voice_ws.py
backend/tests/integration/: test_rag.py  test_repositories.py
backend/tests/unit/: test_config.py  test_hindi_translator.py  test_hindi_voice.py  test_prompt_and_cleaning.py  test_rate_limit.py  test_security.py  test_starter_faqs.py  test_telemetry.py  test_validation.py
deploy/: README.md
docs/: ARCHITECTURE.md
(+101 files in other folders)
