[project]
name = "voice-ai-backend"
version = "0.1.0"
description = "Self-hosted Voice + Text AI Assistant backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Phase 1 keeps dependencies minimal — just enough to run the FastAPI
# skeleton and load config. Heavy AI/DB deps are added in later phases
# (commented below as a roadmap) so a low-config PC can install quickly.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # ---- Database (Phase 3) ----
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",   # async SQLite driver (dev fallback)
    "greenlet>=3.0",     # required by SQLAlchemy async
    # ---- RAG (Phase 6) ----
    "qdrant-client>=1.11",  # includes embedded local mode (no server needed)
    "numpy>=1.26",          # lightweight lexical embedder + vector math
    # ---- LLM client (Phase 7) ----
    "httpx>=0.27",          # async client for the Ollama API
    # ---- Monitoring (Phase 9) ----
    "prometheus-client>=0.20",  # /metrics exposition (pure-python, lightweight)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]
# MS SQL Server drivers — install on the server (needs an ODBC driver present).
# Kept optional so a low-config dev PC installs quickly with SQLite only.
mssql = [
    "aioodbc>=0.5",
    "pyodbc>=5.1",
]

# Redis client — optional cache, shared rate-limit counter, and helpdesk state.
# Only needed when REDIS_URL is set (server); local dev runs fine without it.
cache = [
    "redis>=5.0",
]

# Real embedding + reranking models (bge-m3, bge-reranker-v2-m3).
# Heavy (pulls PyTorch) — install on the server, not required on a dev PC where
# the lightweight lexical embedder is used instead.
embeddings = [
    "sentence-transformers>=3.0",
]
# Document loaders for ingestion. Light-ish; lazily imported so the pipeline
# runs with only the formats you actually use.
ingest = [
    "pypdf>=4.2",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pyyaml>=6.0",
    "trafilatura>=1.12",  # high-accuracy website → Markdown extraction
]

# Speech-to-text (faster-whisper) and text-to-speech (Piper). Heavy; install on
# the machine that actually runs voice (server or a capable dev box).
voice = [
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "indic-transliteration>=2.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ingestion*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
